--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
 body {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Inter', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  background-color: #8ee4af;
+}
+.navbar{
+  width: 99.5%;
+  border:solid;
+  border-top-color: #5cdb95;
+  border-right-color: #5cdb95;
+  border-left-color:#5cdb95;
+  border-bottom-color: #5cdb95;
+  background-color: #5cdb95;
+  text-align: center;
+}
+.navbar--title{
+  font-size: 200%;
+  color: #05386b;
+}
+.title--icon{
+  margin-left:2.5%;
+}
+.card--container{
+  width: 75%;
+  margin-top: 5%;;
+  margin-left: 12.5%;
+  height: 300px;
+  background-color: #5cdb95;
+  border-radius: 9px;
+}
+.card--img--container{
+  width: 40%;
+  height: auto;
+  float: left;
+
+
+}
+.card--img{
+  width: 100%; 
+  height: 300px;
+  border-radius: 9px;
+}
+.card--content{
+  margin-left: 45%;
+  color:#05386b;
+
+}
+.card--info{
+  font-size: 12px;
+  font-weight: 500;
+  color: white;
+}
+.icon--style{
+  color: #05386b;
+}
+.icon--margin{
+  margin-left: 2.5%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a:link{
+  color: #05386b;
+}
+a:visited{
+  color: #05386b;
+}
+a:hover{
+  color: white;
+}
+footer{
+  width: 100%;
+  margin-top: 5%;
+  background-color: #5cdb95;
+  text-align: center;
+
+}
+.footer-icon{
+  margin-right: 5%;
 }
