--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,22 @@ footer{
 .footer-icon{
   margin-right: 5%;
 }
+@media (max-width: 500px) {
+  .card--title{
+    font-size: 24px;
+  }
+  .card--info{
+    font-size: 12px;
+  }
+
+  .card--img{
+    height: 150px;
+  }
+  .card--img--container{
+    width: 40%;
+    margin-top: 22.5%;
+    height: auto;
+    float: left;
+  }
+  
+}
